test/sema/typeck/lambda/basic-wrong-return.out
error: `return` expects value of type `Bool` but got `Int32`.
--> basic-wrong-return.dora:1:33 - 3:2
1 error found.
