test/sema/typeck/lambda/basic-wrong-return.dora
fn f(foo: (Int32): Int32): Bool {
    foo(1i32)
}
